--- a/Example/AutoKeyboardScrollView/Info.plist
+++ b/Example/AutoKeyboardScrollView/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>honghaoz.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.honghao.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
