--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-language: swift
-# rvm:
-#  - "1.8.7"
-#  - "1.9.2"
-#  - "1.9.3"
-#  - rbx
-# uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+language: objective-c
+osx_image: xcode6.4
+env:
+  global:
+  - LC_CTYPE=en_US.UTF-8
+  - LANG=en_US.UTF-8
+before_install:
+  - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
